--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,13 +3,17 @@ import SingleArticle from "../../components/SingleArticle.astro"
 import {articlesList} from "../../quearies/articles.js"
 
 import Header from "../../components/Header.astro"
+import CategoryBar from "../../components/CategoryBar.astro"
+import Footer from "../../components/Footer.astro"
 ---
 
-<Header>
-    
-</Header>
+<Header></Header>
 
-<h1>bllog</h1>
+<CategoryBar></CategoryBar>
+
+
+
+<h1>BgResturants</h1>
 
 <div style="display: flex;">
 {
@@ -18,3 +22,5 @@ import Header from "../../components/Header.astro"
     ))
 }
 </div>
+
+<Footer></Footer>
