--- a/src/components/CategoryBar.astro
+++ b/src/components/CategoryBar.astro
@@ -1,43 +1,49 @@
 ---
+import { Image } from "astro:assets";
 
+import { categoryList } from "../quearies/category.js";
 ---
 
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
 
-        .category-bar {
-            background-color: #7c5614;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            height: 50px;
-            color: #fff;
-        }
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+    }
 
-        .category-button {
-            text-decoration: none;
-            color: #000000;
-            padding: 10px;
-            transition: background-color 0.3s;
-        }
+    .category-bar {
+        background-color: #8bc750;
+        display: flex;
+        justify-content: space-evenly;
+        align-items:center;
+        height: 50px;
+        color: #fff;
+    }
 
-        .category-button:hover {
-            background-color: #555;
-        }
-    </style>
- 
+    .category-button {
+        text-decoration: none;
+        color: #eeeeee;
+        padding: 10px;
+        transition: ;
+    }
+
+    .category-button:hover {
+        background-color: #555;
+        border-radius: 9%;
+    }
+</style>
 
 <div class="category-bar">
-    <a href="#" class="category-button">Category 1</a>
-    <a href="#" class="category-button">Category 2</a>
-    <a href="#" class="category-button">Category 3</a>
-    <a href="#" class="category-button">Category 4</a>
+    <div class="nav">
+        {
+            categoryList.categories.data.map(({attributes}) => {
+              return(
+    <a class="category-button" href={`/categories/${attributes.slug}`}>{attributes.name}</a>
+    )
+            })
+        }
+      </div>
+      
 </div>
-
-
-
