--- a/src/components/SingleArticle.astro
+++ b/src/components/SingleArticle.astro
@@ -1,9 +1,15 @@
 ---
 import { Image } from "astro:assets";
 
-const {url,image, name } = Astro.props
+const { url, image, name } = Astro.props;
 ---
+
 <a href={`/blog/${url}`}>
-<h2>{name}</h2>
-<Image src={image.data.attributes.url} alt={image.data.attributes.alternativeText} width="200" height="200">
+    <h2>{name}</h2>
+    <Image
+        src={image.data.attributes.url}
+        alt={image.data.attributes.alternativeText || "Ресторанти"}
+        width="200"
+        height="200"
+    />
 </a>
