--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,26 +1,32 @@
 ---
-import SingleArticle from "../../components/SingleArticle.astro"
-import {articlesList} from "../../quearies/articles.js"
+import SingleArticle from "../../components/SingleArticle.astro";
+import { articlesList } from "../../quearies/articles.js";
 
-import Header from "../../components/Header.astro"
-import CategoryBar from "../../components/CategoryBar.astro"
-import Footer from "../../components/Footer.astro"
+import Header from "../../components/Header.astro";
+import CategoryBar from "../../components/CategoryBar.astro";
+import Footer from "../../components/Footer.astro";
+import BlackBar from "../../components/BlackBar.astro";
+import SEOcontent from "../../components/SEOcontent.astro";
+import OpinionSlider from "../../components/OpinionSlider.astro";
+import DefaultLayout from "../../layouts/DefaultLayout.astro";
 ---
 
-<Header></Header>
+<DefaultLayout>
+    <CategoryBar />
 
-<CategoryBar></CategoryBar>
+    <div style="display: flex;" ,>
+        {
+            articlesList.posts.data.map((item) => (
+                <SingleArticle
+                    url={item.attributes.slug}
+                    image={item.attributes.image}
+                    name={item.attributes.name}
+                />
+            ))
+        }
+    </div>
 
-
-
-<h1>BgResturants</h1>
-
-<div style="display: flex;">
-{
-    articlesList.posts.data.map((item) => (
-        <SingleArticle url={item.attributes.slug} image={item.attributes.image} name={item.attributes.name} />
-    ))
-}
-</div>
-
-<Footer></Footer>
+    <BlackBar />
+    <OpinionSlider />
+    <SEOcontent />
+</DefaultLayout>
