Adding footer grid, and more general things.

--- a/src/components/CategoryBar.astro
+++ b/src/components/CategoryBar.astro
@@ -14,25 +14,29 @@ import { categoryList } from "../quearies/category.js";
     }
 
     .category-bar {
-        background-color: #8bc750;
+        background-color: #1F0D07;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-around;
         align-items:center;
         height: 50px;
         color: #fff;
     }
 
     .category-button {
-        text-decoration: none;
         color: #eeeeee;
-        padding: 10px;
-        transition: ;
+        padding: 80px;               /Moving/ 
+       
     }
 
-    .category-button:hover {
+    /* .category-button:hover {
         background-color: #555;
         border-radius: 9%;
-    }
+        
+    } */
+
+    .category-button:hover {
+  font-size: 1.1em; /* Промяна на размера на шрифта */
+}
 </style>
 
 <div class="category-bar">
