--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ import bgrest from "../images/bgrest.svg";
       justify-content: space-between;
       align-items: center;
       padding: 20px;
-      background-color: #f5eee2;
+      background-color: #F5EEE2;
     }
 
     .logo img {
