--- a/src/components/SEOcontent.astro
+++ b/src/components/SEOcontent.astro
@@ -85,8 +85,9 @@
                 пътешествие, в което вкусът, атмосферата и иновациите се
                 преплитат в хармония. Специалните събития, предоставяйки
                 тематични вечери и дегустационни събития, обогатяват този
-                кулинарен свят, правейки го още по-завладяващ. От тях се ражда
-                вълнуващата възможност да обичаме не само вкусовете, но и
+                кулинарен свят, правейки го още по-завладяващ. </p>
+                
+               <p> От тях се ражда вълнуващата възможност да обичаме не само вкусовете, но и
                 креативните изрази на готвачите и уникалните аспекти на
                 сервирането. Така, търсейки най-добрите ресторанти и съчетавайки
                 ги със специални събития, влизаме в свят, където всяка хапка е
@@ -102,13 +103,13 @@
         display: flex;
         width: 70%;
         padding: 6%;
-        background-color: #8f2607;
+        background-color: #F5EEE2;
     }
 
     .text {
         font-size: 90%;
         font-family: "Open Sans", sans-serif;
         text-align: left;
-        color: #ffffff;
+        color: #000000;
     }
 </style>
