--- a/src/components/BlackBar.astro
+++ b/src/components/BlackBar.astro
@@ -28,9 +28,9 @@
         <div class="box">
             <h3>
                 Уебсайтовете за ресторанти събират отзиви и препоръки от
-                посетителите, създавайки дигитална общност и предоставяйки ценна
+                посетителите, създавайки общност и предоставяйки ценна
                 информация на потенциални клиенти за качеството на обслужването
-                и вкусовете в ресторанта.
+                в ресторанта.
             </h3>
         </div>
     </div>
@@ -40,25 +40,24 @@
     .BlackBar {
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
 
         background-color: #000000;
     }
 
     .box {
         display: flex;
-        margin: 1%;
-        padding: 1%;
+        margin: 4%;
+        padding: 10px;
         background-color: rgb(0, 0, 0);
         color: rgb(255, 255, 255);
         font-family: sans-serif;
-        font-size: 80%;
-        text-align: center;
+        font-size: 85%;
     }
 
     .content-box {
         display: flex;
-        padding: 1%;
+        /* padding: 1%; */ 
+        /* margin: 1%; */
         justify-content: center;
         color: rgb(255, 255, 255);
         background-color: rgb(0, 0, 0);
