--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import facebooklogo from "../images/facebooklogo.svg";
 import { categoryList } from "../quearies/category.js";
 ---
 
-<footer>
+<!-- <footer>
   
   <div class="links-wrapper">
     <div class="logo">
@@ -42,7 +42,7 @@ import { categoryList } from "../quearies/category.js";
   </div>
 
   <div class="rights">
-    <h2>© 2024 BgResturants. Всички права запазени. Created by L4</h2>
+    <h2>© 2024-2026 BgResturants. Всички права запазени. (Created by L4)</h2>
   </div>
 
 </footer>
@@ -54,23 +54,26 @@ import { categoryList } from "../quearies/category.js";
     color: #000000;
     width: 100%;
     flex-direction: column;
+    
   }
 
   .links-wrapper{
   display: flex;
-  justify-content: space-around
+  justify-content: space-around;
+  
   }
 
 
   .rights {
-    /* display: flex;
-    text-align:center
-    margin: 10%;
-    font-size: 50%; */
+    display: flex;
+    text-align:bottom;
+    margin: 13%;
+    font-size: 50%;
     position: absolute;
-    bottom: 1%;                       /towa se mesti/
-    left: 50%;
-    transform: translateX(-30%);
+    /* bottom: 130%;                       /towa se mesti/ */
+    left:4%;
+    transform: translateX(-50%);
+    background-color: #F5EEE2;
   }
 
   .logo {
@@ -98,4 +101,123 @@ import { categoryList } from "../quearies/category.js";
   }
 
 
+</style> -->
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+  }
+
+  footer {
+    background: linear-gradient(180deg, #F5EEE2 0%, #e3e4e6 100%);
+    color: white;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+  }
+
+  footer ul {
+    color: #000000;
+    list-style: none;
+    padding-left: 0px;
+  }
+
+  .column {
+    padding: 10px;
+  }
+
+  .footerHeading {
+    color: #9ca5b4;
+    font-weight: bolder;
+    font-size: large;
+  }
+
+  .categories {
+    display: flex;
+    flex-direction: column; /* Променено от "row" на "column" */
+    justify-content: center;
+    margin: 1%;
+    font-size: 100%;
+  }
+
+  .centered-img {
+    display: grid;   /*Logo layout*/
+    justify-content: start;
+    align-items: center;
+  }
+
+  .category-button{
+    text-decoration: none;
+    color: #000000;
+  }
+
+  .rights {
+    display: flex;
+    text-align:bottom;
+    margin: 13%;
+    font-size: 50%;
+    position: absolute;
+    /* bottom: 130%;                       /towa se mesti/ */
+    left:4%;
+    transform: translateX(-50%);
+    background-color: #F5EEE2;
+  }
+
+  @media screen and (max-width: 670px) {
+    footer {
+      grid-template-columns: 2fr;
+      grid-template-rows: 1fr;
+    }
+
+    img.column {
+      width: 150px;
+      height: 68px;
+      padding-top: 100px;
+    }
+  }
+
+  @media screen and (max-width: 440px) {
+    div .column {
+      width: 100px;
+      height: 68px;
+    }
+  }
 </style>
+
+<footer>
+  <div class="column centered-img">
+    <Image src={bgrest} alt="logo" width="374" height="68" />
+  </div>
+
+  <div class="footer-categories">
+    <p class="footerHeading">Категории</p>
+    <div class="categories">
+      {
+        categoryList.categories.data.map(({ attributes }) => {
+          return (
+            <a class="category-button" href={`/categories/${attributes.slug}`}>
+              {attributes.name}
+            </a>
+          );
+        })
+      }
+    </div>
+  </div>
+  <div class="column">
+    <p class="footerHeading">Полезни връзки</p>
+    <ul>
+      <li>0878887559</li>
+      <li>Политика за поверителност</li>
+    </ul>
+    <a href="https://www.instagram.com/" target="_blank">
+      <Image src={isnstagramLogo} alt="logo" width="50" height="50" />
+    </a>
+   <a href="https://www.facebook.com/" target="_blank">
+    <Image src={facebooklogo} alt="logo" width="40" height="50" />
+  </a>
+  </div>
+
+
+
+</footer>
