--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,19 @@
 ---
-
+import DefaultLayout from "../layouts/DefaultLayout.astro";
+import CategoryBar from "../components/CategoryBar.astro";
+import SEOcontent from "../components/SEOcontent.astro";
+import OpinionSlider from "../components/OpinionSlider.astro";
+import BlackBar from "../components/BlackBar.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Колеца</h1>
-	</body>
-</html>
+<meta charset="utf-8" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<meta name="viewport" content="width=device-width" />
+<meta name="generator" content={Astro.generator} />
+<title>Astro</title>
+<DefaultLayout>
+	<CategoryBar />
+	<OpinionSlider ></OpinionSlider>
+    <BlackBar></BlackBar>
+	<SEOcontent></SEOcontent>
+</DefaultLayout>
