Adding hightlits,lastetst scroll and other things

--- a/src/components/BlackBar.astro
+++ b/src/components/BlackBar.astro
@@ -9,29 +9,29 @@
 
     <div class="BlackBar">
         <div class="box">
-            <h3>
+            <p>
                 Уебсайтът на ресторанта предоставя удобство на клиентите чрез
                 бързи и лесни онлайн резервации за маса, позволявайки им да
                 планират своето посещение с минимални усилия.
-            </h3>
+            </p>
         </div>
 
         <div class="box">
-            <h3>
+            <p>
                 Със своето онлайн присъствие, ресторантът предлага подробна
                 информация за разнообразието в менюто си, позволявайки на
                 клиентите лесно да изберат ястия и напитки, които отговарят на
                 техните вкусове.
-            </h3>
+            </p>
         </div>
 
         <div class="box">
-            <h3>
+            <p>
                 Уебсайтовете за ресторанти събират отзиви и препоръки от
                 посетителите, създавайки общност и предоставяйки ценна
                 информация на потенциални клиенти за качеството на обслужването
                 в ресторанта.
-            </h3>
+            </p>
         </div>
     </div>
 </blackBar>
@@ -51,7 +51,8 @@
         background-color: rgb(0, 0, 0);
         color: rgb(255, 255, 255);
         font-family: sans-serif;
-        font-size: 85%;
+        font-size: 15px;
+        text-align: center;
     }
 
     .content-box {
