--- a/src/components/InfinityHorizontalSlider.astro
+++ b/src/components/InfinityHorizontalSlider.astro
@@ -1,4 +1,4 @@
-<!-- ---
+---
 import SingleArticle from "./SingleArticle.astro";
 import { articlesList } from "../quearies/articles";
 
@@ -16,15 +16,25 @@ import "@splidejs/splide/css";
 </style>
 
 <script>
-    import Splide from "@splidejs/splide";
+    import { Splide } from "@splidejs/splide";
+    import { AutoScroll } from "@splidejs/splide-extension-auto-scroll";
 
-    document.addEventListener("DOMContentLoaded", () => {
-        let splide = new Splide(".splide");
-        splide.mount();
+    new Splide(".splide").mount({ AutoScroll });
+
+    const splide = new Splide(".splide", {
+        type: "loop",
+        drag: "free",
+        focus: "center",
+        perPage: 3,
+        autoScroll: {
+            speed: 0.5
+        },
     });
+
+    splide.mount();
 </script>
 
-<section class="splide" aria-label="Splide Basic HTML Example">
+<section class="splide infinity_slide">
     <div class="splide__track">
         <ul class="splide__list">
             {
@@ -42,4 +52,4 @@ import "@splidejs/splide/css";
             }
         </ul>
     </div>
-</section> -->
+</section>
