--- a/src/components/SingleArticle.astro
+++ b/src/components/SingleArticle.astro
@@ -4,12 +4,35 @@ import { Image } from "astro:assets";
 const { url, image, name } = Astro.props;
 ---
 
+<style>
+   
+    a{
+        position: relative;
+    }
+
+    h2{
+        position: absolute;
+        bottom: 0;
+        left: 1;
+        color: rgb(0, 0, 0);
+    }
+
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 7%;
+        
+    }
+</style>
+
 <a href={`/blog/${url}`}>
     <h2>{name}</h2>
     <Image
-        src={image.data.attributes.url}
-        alt={image.data.attributes.alternativeText || "Ресторанти"}
-        width="200"
-        height="200"
+    src={image.data.attributes.url}
+    alt={image.data.attributes.alternativeText || "Ресторанти"}
+    width="200"
+    height="200"
     />
 </a>
+
