--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -9,13 +9,21 @@ import BlackBar from "../../components/BlackBar.astro";
 import SEOcontent from "../../components/SEOcontent.astro";
 import OpinionSlider from "../../components/OpinionSlider.astro";
 import DefaultLayout from "../../layouts/DefaultLayout.astro";
+import Higlihts from "../../components/Higlithts.astro";
+import Lastest from "../../components/Lastest.astro";
 import InfinityHorizontalSlider from "../../components/InfinityHorizontalSlider.astro";
 ---
 
+<style>
+    .latest-body {
+        display: flex;
+        justify-content: right;
+    }
+</style>
 <DefaultLayout>
     <CategoryBar />
-<InfinityHorizontalSlider></InfinityHorizontalSlider>
-    <div style="display: flex;" ,>
+    <InfinityHorizontalSlider />
+    <!-- <div style="display: flex;" ,>
         {
             articlesList.posts.data.map((item) => (
                 <SingleArticle
@@ -25,10 +33,14 @@ import InfinityHorizontalSlider from "../../components/InfinityHorizontalSlider.
                 />
             ))
         }
+    </div> -->
+   
+    <div class="latest-body">
+        <Higlihts />
+        <Lastest />
+        
     </div>
     <OpinionSlider />
     <BlackBar />
-   
     <SEOcontent />
 </DefaultLayout>
-
