Adding some stuff and editing the view

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -110,11 +110,12 @@ import { categoryList } from "../quearies/category.js";
   }
 
   footer {
-    background: linear-gradient(180deg, #F5EEE2 0%, #e3e4e6 100%);
+    /* background: linear-gradient(180deg, #F5EEE2 0%, #e3e4e6 100%); */
     color: white;
     padding: 20px;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
+    border-top: 2px solid grey;
   }
 
   footer ul {
@@ -161,7 +162,7 @@ import { categoryList } from "../quearies/category.js";
     /* bottom: 130%;                       /towa se mesti/ */
     left:4%;
     transform: translateX(-50%);
-    background-color: #F5EEE2;
+    /* background-color: #F5EEE2; */
   }
 
   @media screen and (max-width: 670px) {
