--- a/src/components/Lastest.astro
+++ b/src/components/Lastest.astro
@@ -6,13 +6,13 @@ let counter = 0;
 
 <style>
     .latest {
-        width: 400px;
+        width: 400;
         height: 600px;
         border: solid 20px #1f0d07;
         border-radius: 20px;
         background-color: #1f0d07;
         overflow-y: scroll;
-        margin-right: 10%;
+        margin-right: 8%;
         margin-top: 5.8%;
     }
 
@@ -23,7 +23,10 @@ let counter = 0;
     display: flex;
 
     } */
+
+
 </style>
+
 
 <div class="latest">
     <div>
