--- a/src/components/OpinionSlider.astro
+++ b/src/components/OpinionSlider.astro
@@ -68,15 +68,15 @@ import "@splidejs/splide/css";
 <style>
   .splide__track {
     color: rgb(0, 0, 0);
-    background-color: #F5EEE2;
+    /* background-color: #F5EEE2; */
     width: 100%;
-    
+    border: 2px solid grey;
     padding: 4%;
   }
 
   .splide__list {
     text-align: center;
-    
+
   }
 
   .userdiv{
