--- a/src/components/SEOcontent.astro
+++ b/src/components/SEOcontent.astro
@@ -103,7 +103,7 @@
         display: flex;
         width: 70%;
         padding: 6%;
-        background-color: #F5EEE2;
+        /* background-color: #F5EEE2; */
     }
 
     .text {
